--- a/TranRomain.html
+++ b/TranRomain.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TranRomain</title>
+    <title>TranRomain SLT</title>
 </head>
 <body>
 
